<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create_driver</name>
  <version>2.0.0</version>
  <description>ROS driver for iRobot's Create and Roomba platforms, based on libcreate</description>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--<buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <depend>rclcpp</depend>
  <depend>create_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libcreate</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!--<exec_depend>message_runtime</exec_depend>-->
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
