<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create_robot</name>
  <version>2.0.0</version>
  <description>ROS driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <exec_depend>create_bringup</exec_depend>
  <exec_depend>create_description</exec_depend>
  <exec_depend>create_driver</exec_depend>
  <exec_depend>create_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
